update contact page

--- a/english-contact.html
+++ b/english-contact.html
@@ -33,10 +33,10 @@
             <a href="./spanish-homepage.html">  Home </a>
             </li>
             <li>
-            <a href="./spanish-blog.html" class="active"> Blog </a>
+            <a href="./spanish-blog.html" > Blog </a>
             </li>
             <li> 
-            <a href="./spanish-contact.html">  Contact </a> 
+            <a href="./spanish-contact.html" class="active">  Contact </a> 
             </li>
             <li> 
             <a href="./spanish-resources.html" class="resources">  Resources </a>
@@ -47,63 +47,26 @@
     </header>
     <!-- Main Section -->
     <div class="container">
-        <section class="blog-main">
-            <!-- Column -->
-            <div class="four-columns-blog">
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div>
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div>
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div> 
-            </div>
-            <!-- Column -->
-            <div class="four-columns-blog">
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div>
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div>
-                <!-- Card  -->
-                <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="card-description"> 5 Second Rule </div>
-                </div> 
-            </div>
-        </section>
-    <!-- Footer -->
+        <h1 class="mb-5"> Get in touch! </h1>
+        <h3> Send me an e-mail </h3>
+            <p>
+                <a href="mailto:laucarrillo21@gmail.com" class="contact-link" target="_blanks">
+                    laucarrillo21@gmail.com
+                </a>
+            </p>
+        <h3> Conect with me on Linkedin</h3>
+            <p>
+                <a href="https://www.linkedin.com/in/laura-carrillo-975a53139" target="_blank" class="contact-link">
+                    Laura Carrillo
+                </a>
+            </p>
+        <h3> Follow me on Instagram</h3>
+        <p>
+                <a href="https://www.instagram.com/lau_carrillo" target="_blank" class="contact-link">
+                    @lau_carrillo
+                </a>
+        </p>
+
     <!-- Footer -->
     <footer>
         <section class="grid-3-columns">
@@ -141,4 +104,3 @@
     </div>
 </body>
 </html>
-
