--- a/english-home.html
+++ b/english-home.html
@@ -36,7 +36,7 @@
             <a href="./english-blog.html"> Blog </a>
             </li>
             <li> 
-            <a href="./spanish-contact.html">  Contact </a> 
+            <a href="./english-contact.html">  Contact </a> 
             </li>
             <li> 
             <a href="./spanish-resources.html" class="resources">  Resources </a>
@@ -145,7 +145,7 @@
             <h3> Resources </h3>
             <ul>
                 <li>
-                    <a href="./spanish-blog.html" target="_blank" class="footer-link"> Blog </a> 
+                    <a href="./english-blog.html" target="_blank" class="footer-link"> Blog </a> 
                 <li>
                     <a href="./spanish-resources.html" target="_blank" class="footer-link">Resources</a>
                 </li>
