--- a/english-home.html
+++ b/english-home.html
@@ -39,7 +39,7 @@
             <a href="./english-contact.html">  Contact </a> 
             </li>
             <li> 
-            <a href="./spanish-resources.html" class="resources">  Resources </a>
+            <a href="./english-resources.html" class="resources">  Resources </a>
             </li>
         </ul>
         </div>
