--- a/english-home.html
+++ b/english-home.html
@@ -36,7 +36,7 @@
             <a href="./english-blog.html"> Blog </a>
             </li>
             <li> 
-            <a href="./english-contact.html">  Contact </a> 
+            <a href="./english-resources.html">  Contact </a> 
             </li>
             <li> 
             <a href="./english-resources.html" class="resources">  Resources </a>
