--- a/english-contact.html
+++ b/english-contact.html
@@ -30,16 +30,16 @@
         <!-- Right Menu -->
         <ul>
             <li>
-            <a href="./spanish-homepage.html">  Home </a>
+            <a href="./english-home.html">  Home </a>
             </li>
             <li>
-            <a href="./spanish-blog.html" > Blog </a>
+            <a href="./english-blog.html" > Blog </a>
             </li>
             <li> 
-            <a href="./spanish-contact.html" class="active">  Contact </a> 
+            <a href="./english-contact.html" class="active">  Contact </a> 
             </li>
             <li> 
-            <a href="./spanish-resources.html" class="resources">  Resources </a>
+            <a href="./english-resources.html" class="resources">  Resources </a>
             </li>
         </ul>
         </div>
@@ -87,7 +87,7 @@
                 <li>
                     <a href="./english-blog.html" target="_blank" class="footer-link"> Blog </a> 
                 <li>
-                    <a href="./spanish-resources.html" target="_blank" class="footer-link">Resources</a>
+                    <a href="./english-resources.html" target="_blank" class="footer-link">Resources</a>
                 </li>
             </ul>
         </div>
