--- a/english-home.html
+++ b/english-home.html
@@ -147,7 +147,7 @@
                 <li>
                     <a href="./english-blog.html" target="_blank" class="footer-link"> Blog </a> 
                 <li>
-                    <a href="./spanish-resources.html" target="_blank" class="footer-link">Resources</a>
+                    <a href="./english-resources.html" target="_blank" class="footer-link">Resources</a>
                 </li>
             </ul>
         </div>
