update blog cards

--- a/spanish-blog.html
+++ b/spanish-blog.html
@@ -52,27 +52,27 @@
             <div class="four-columns-blog">
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog1.png" alt="blog-1" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> 10 Tips para aprender inglés </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog6.png" alt="blog-6" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> Tips para trabajar en casa </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog3.png" alt="blog-3" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> 5 mujeres increíbles en tecnología </div>
                 </div>
             </div>
 
@@ -80,27 +80,27 @@
             <div class="four-columns-blog">
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog4.png" alt="blog-4" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> ¿Cuál es la diferencia entre ser desarrolladora Frontend, Backend y Fullstack? </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog5.png" alt="blog-5" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> 5 razones para aprender a programar </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> CRECIMIENTO PERSONAL </div>
+                    <div class="card-title"> CRECIMIENTO PROFESIONAL </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog2.png" alt="blog-1" class="blog-img">
                     </div>
-                    <div class="card-description"> La regla de los 5 segundos </div>
+                    <div class="card-description"> Mi experencia en un Bootcamp de programación </div>
                 </div>
             </div>
         </section>
