update english blog

--- a/english-blog.html
+++ b/english-blog.html
@@ -52,54 +52,54 @@
             <div class="four-columns-blog">
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog1.png" alt="blog-1" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> 10 tips to learn English </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT  </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog6.png" alt="blog-6" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> Tips to work at home </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT  </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog3.png" alt="blog-3" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> 5 awesome women in tech </div>
                 </div> 
             </div>
             <!-- Column -->
             <div class="four-columns-blog">
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT  </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog4.png" alt="blog-4" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> Frontend vs Backend vs Fullstack </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT  </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog5.png" alt="blog-5" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> 5 reasons to learn programming </div>
                 </div>
                 <!-- Card  -->
                 <div class="blog-card">
-                    <div class="card-title"> PERSONAL GROWTH </div>
+                    <div class="card-title"> PROFESSIONAL DEVELOPMENT  </div>
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog2.png" alt="blog-2" class="blog-img">
                     </div>
-                    <div class="card-description"> 5 Second Rule </div>
+                    <div class="card-description"> My personal experience in a programming Bootcamp </div>
                 </div> 
             </div>
         </section>
