--- a/spanish-resources.html
+++ b/spanish-resources.html
@@ -53,17 +53,16 @@
                 <!-- Resource  -->
                 <div class="resource-card">
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog1.png" alt="blog-1" class="blog-img">
                     </div>
                     <div class="resource-title">
-                        Diseña la vida de tus
+                        10 tips para aprender 
                         <br/>
-                        sueños 
+                        inglés 
                     </div>
                     <div class="resource-description"> 
                     <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
+                        <li> Guía en PDF </li>
                     </ul>
                     </div>
                     <div class="resource-button">
@@ -75,17 +74,16 @@
                 <!-- Resource 1 -->
                 <div class="resource-card">
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog6.png" alt="blog-6" class="blog-img">
                     </div>
                     <div class="resource-title">
-                        Diseña la vida de tus
+                        Tips para trabajar
                         <br/>
-                        sueños 
+                        en casa 
                     </div>
                     <div class="resource-description"> 
                     <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
+                        <li> Guía en PDF </li>
                     </ul>
                     </div>
                     <div class="resource-button">
@@ -97,129 +95,36 @@
                 <!-- Resource 2 -->
                 <div class="resource-card">
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/resource2.png" alt="resource-2" class="blog-img">
                     </div>
                     <div class="resource-title">
-                        Diseña la vida de tus
+                        Curso de inglés
                         <br/>
-                        sueños 
+                        básico
                     </div>
                     <div class="resource-description"> 
                     <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
+                        <li> Curso de inglés </li>
                     </ul>
                     </div>
                     <div class="resource-button">
                         <button class="rsc-button">
-                            Descargar
+                            Ver más
                         </button>
                     </div>
                 </div> 
                 <!-- Resource 3 -->
                 <div class="resource-card">
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/resource1.png" alt="resource-1" class="blog-img">
                     </div>
                     <div class="resource-title">
-                        Diseña la vida de tus
+                        La rueda de
                         <br/>
-                        sueños 
+                        la vida 
                     </div>
                     <div class="resource-description"> 
                     <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Descargar
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <!-- Column -->
-            <div class="three-columns-resource">
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Diseña la vida de tus
-                        <br/>
-                        sueños 
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Descargar
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource 1 -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Diseña la vida de tus
-                        <br/>
-                        sueños 
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Descargar
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource 2 -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Diseña la vida de tus
-                        <br/>
-                        sueños 
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Cuaderno de ejercicios </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Descargar
-                        </button>
-                    </div>
-                </div> 
-                <!-- Resource 3 -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Diseña la vida de tus
-                        <br/>
-                        sueños 
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
                         <li> Cuaderno de ejercicios </li>
                     </ul>
                     </div>
