--- a/english-resources.html
+++ b/english-resources.html
@@ -51,190 +51,92 @@
         <section class="resources-main">
             <!-- Column -->
             <div class="three-columns-resource">
-                <!-- Resource  -->
+            <!-- Resource  -->
                 <div class="resource-card">
                     <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
+                        <img src="./src/blog1.png" alt="blog-1" class="blog-img">
+                        </div>
+                        <div class="resource-title">
+                            10 tips to learn
+                            <br/>
+                            English
+                        </div>
+                        <div class="resource-description"> 
+                        <ul>
+                            <li> PDF Guide </li>
+                        </ul>
+                        </div>
+                        <div class="resource-button">
+                            <button class="rsc-button">
+                                Download
+                            </button>
+                        </div>
                     </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
+                    <!-- Resource 1 -->
+                    <div class="resource-card">
+                        <div>
+                            <img src="./src/blog6.png" alt="blog-6" class="blog-img">
+                        </div>
+                        <div class="resource-title">
+                            Tips to work
+                            <br/>
+                            at home
+                        </div>
+                        <div class="resource-description"> 
+                        <ul>
+                            <li> PDF Guide </li>
+                        </ul>
+                        </div>
+                        <div class="resource-button">
+                            <button class="rsc-button">
+                                Download
+                            </button>
+                        </div>
                     </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
+                    <!-- Resource 2 -->
+                    <div class="resource-card">
+                        <div>
+                            <img src="./src/resource2.png" alt="resource-2" class="blog-img">
+                        </div>
+                        <div class="resource-title">
+                            Basic English
+                            <br/>
+                            course
+                        </div>
+                        <div class="resource-description"> 
+                        <ul>
+                            <li> English course </li>
+                        </ul>
+                        </div>
+                        <div class="resource-button">
+                            <button class="rsc-button">
+                                Learn more
+                            </button>
+                        </div>
+                    </div> 
+                    <!-- Resource 3 -->
+                    <div class="resource-card">
+                        <div>
+                            <img src="./src/resource1.png" alt="resource-1" class="blog-img">
+                        </div>
+                        <div class="resource-title">
+                            Areas of
+                            <br/>
+                            life
+                        </div>
+                        <div class="resource-description"> 
+                        <ul>
+                            <li> Workbook </li>
+                        </ul>
+                        </div>
+                        <div class="resource-button">
+                            <button class="rsc-button">
+                                Download
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- Column -->
-            <div class="three-columns-resource">
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-                <!-- Resource  -->
-                <div class="resource-card">
-                    <div>
-                        <img src="./src/test.png" alt="test-1" class="test">
-                    </div>
-                    <div class="resource-title">
-                        Create your dream
-                        <br/>
-                        life
-                    </div>
-                    <div class="resource-description"> 
-                    <ul>
-                        <li> Video </li>
-                        <li> Workbook </li>
-                    </ul>
-                    </div>
-                    <div class="resource-button">
-                        <button class="rsc-button">
-                            Download
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        
+            </section>
     <!-- Footer -->
     <footer>
         <section class="grid-3-columns">
